<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.5</version>
        <relativePath/>
    </parent>
    <groupId>me.golemcore</groupId>
    <artifactId>golemcore-bot-parent</artifactId>
    <version>0.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>golemcore-bot-parent</name>
    <description>Parent build for GolemCore Bot modules</description>

    <url>https://github.com/alexk-dev/golemcore-bot</url>

    <developers>
        <developer>
            <id>alexk-dev</id>
            <name>Alex K</name>
            <url>https://github.com/alexk-dev</url>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/alexk-dev/golemcore-bot.git</connection>
        <developerConnection>scm:git:ssh://github.com:alexk-dev/golemcore-bot.git</developerConnection>
        <url>https://github.com/alexk-dev/golemcore-bot/tree/main</url>
    </scm>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
            <comments>A business-friendly OSS license with explicit patent grant</comments>
        </license>
    </licenses>

    <modules>
        <module>golemcore-bot-contracts</module>
        <module>golemcore-bot-app</module>
        <module>golemcore-bot-self-evolving</module>
        <module>golemcore-bot-client</module>
    </modules>

    <properties>
        <java.version>25</java.version>
        <spring-boot.version>4.0.5</spring-boot.version>
        <feign.version>13.11</feign.version>
        <okhttp.version>5.3.2</okhttp.version>
        <telegram.version>9.5.0</telegram.version>
        <langchain4j.version>1.12.2</langchain4j.version>
        <jjwt.version>0.13.0</jjwt.version>
        <totp.version>1.7.1</totp.version>
        <protobuf.version>4.34.1</protobuf.version>
        <protobuf.maven.plugin.version>0.6.1</protobuf.maven.plugin.version>
        <json.schema.validator.version>1.5.6</json.schema.validator.version>
        <picocli.version>4.0.4</picocli.version>
        <pty4j.version>0.13.10</pty4j.version>
        <lombok.version>1.18.42</lombok.version>

        <spotbugs.version>4.9.8.3</spotbugs.version>
        <pmd.version>3.28.0</pmd.version>
        <jacoco.version>0.8.14</jacoco.version>
        <archunit.version>1.4.1</archunit.version>
        <jib.version>3.5.1</jib.version>
        <jib.target.image>ghcr.io/${env.GITHUB_REPOSITORY}</jib.target.image>
        <jib.from.image>ghcr.io/alexk-dev/golemcore-bot-base:latest</jib.from.image>
        <jib.platform.arch>amd64</jib.platform.arch>

        <sonar.organization>alexk-dev</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
        <sonar.projectKey>alexk-dev_golemcore-bot</sonar.projectKey>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.squareup.okhttp3</groupId>
                <artifactId>okhttp-bom</artifactId>
                <version>${okhttp.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.15.0</version>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.5</version>
                <configuration>
                    <forkCount>2</forkCount>
                    <reuseForks>true</reuseForks>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
